--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 This is a simple chat software, which includes a server and a client
+
+To start the server 
+./server ip port max_number_of_clients
+
+To start the client
+./client username ip port
+
+==Architecutur
