--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 This is a simple chat software, which includes a server and a client.
 Usage
 -----------
+To compile the code
+
+`make`
+
 To start the server 
 
 `./server ip port max_number_of_clients`
@@ -17,4 +21,5 @@ The `msg.c` contains the functions to construct the messages sent by server and 
 The `str_cli.c` contains the functions to respond to messages sent to the client.
 
 The `server.c` contains the functions to respond to connection request from clients and messages sent to the server.
+
 
